--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,20 @@
       <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
       <img src="img/a.jpg" alt="Masuria">
     </div>
+<div data-role="main" class="ui-content">
+    <a href="#myPopup2" data-rel="popup" class="ui-btn ui-btn-inline ui-corner-all">Pomerania</a>
+
+    <div data-role="popup" id="myPopup2" class="ui-content">
+      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+      <img src="img/b.jpg" alt="Pomerania">
+    </div>
+<div data-role="main" class="ui-content">
+    <a href="#myPopup3" data-rel="popup" class="ui-btn ui-btn-inline ui-corner-all">Tatry</a>
+
+    <div data-role="popup" id="myPopup3" class="ui-content">
+      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+      <img src="img/c.jpg" alt="Tatry">
+    </div>
   </div>
   </div>
 
