--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 		<script src="js/jquery.mobile-1.4.5.min.js"></script>
 	</head>
 	<body>
-<div data-role="page" id="mainPage">
+<div data-role="page" id="attractions">
 <div data-role="header">
     <h1>Tourist attractions</h1>
   </div>
@@ -35,10 +35,38 @@
     </div>
 
   </div>
-	</div>
-  <div data-role="footer">
+
+  <div data-role="main" class="ui-content">
+  <a href="#orders" class="ui-btn">Order</a>  
+  </div>
+  
+<div data-role="footer">
     <h1>by Alex O</h1>
   </div>
+</div>
+
+
+<!-- PAGE 2 --> 
+
+<div data-role="page" id="orders">
+<div data-role="header">
+    <h1>Order Form</h1>
+  </div>
+
+  <div data-role="main" class="ui-content">
+<label for="textinput-hide" class="ui-hidden-accessible">Name:</label>
+<input type="text" name="textinput-hide" id="textinput-hide" placeholder="Name and Surname" value="">
+  </div>
+
+  <div data-role="main" class="ui-content">
+  <a href="#attractions" class="ui-btn">Attractions</a>  
+  </div>
+  
+<div data-role="footer">
+    <h1>by Alex O</h1>
+  </div>
+</div>
+
 
 	</body>
 </html>
