--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,9 @@
 
   <div data-role="main" class="ui-content">
 <label for="textinput-hide" class="ui-hidden-accessible">Name:</label>
-<input type="text" name="textinput-hide" id="textinput-hide" placeholder="Name and Surname" value="">
+<input type="text" name="textinput-hide" id="textinput-hide" placeholder="Name and Surname" value=""><br>
+<label for="dateinput-hide" class="ui-hidden-accessible">Date:</label>
+<input type="date" name="dateinput-hide" id="dateinput-hide" placeholder="Date" value=""><br>
   </div>
 
   <div data-role="main" class="ui-content">
