--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
 <label for="textinput-hide" class="ui-hidden-accessible">Name:</label>
 <input type="text" name="textinput-hide" id="textinput-hide" placeholder="Name and Surname" value=""><br>
 <label for="dateinput-hide" class="ui-hidden-accessible">Date:</label>
-<input type="date" name="dateinput-hide" id="dateinput-hide" placeholder="Date" value=""><br>
+<input type="date" name="textinput-hide" id="dateinput-hide" placeholder="Date" value=""><br>
   </div>
 
   <div data-role="main" class="ui-content">
