--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,19 @@
 <label for="textinput-hide" class="ui-hidden-accessible">Name:</label>
 <input type="text" name="textinput-hide" id="textinput-hide" placeholder="Name and Surname" value=""><br>
 <label for="dateinput-hide" class="ui-hidden-accessible">Date:</label>
-<input type="date" name="textinput-hide" id="dateinput-hide" placeholder="Date" value=""><br>
+<input type="date" name="date" id="dateinput-hide" placeholder="Date" value=""><br>
+<fieldset data-role="controlgroup" data-type="horizontal" data-mini="true">
+        <input type="radio" name="radio-choice-b" id="radio-choice-c" value="apples" checked="checked">
+        <label for="radio-choice-c">Apples</label>
+        <input type="radio" name="radio-choice-b" id="radio-choice-d" value="peaches">
+        <label for="radio-choice-d">Peaches</label>
+        <input type="radio" name="radio-choice-b" id="radio-choice-e" value="icecream">
+        <label for="radio-choice-e">Ice Cream</label>
+        <input type="radio" name="radio-choice-b" id="radio-choice-f" value="coffe">
+        <label for="radio-choice-f">Coffe</label>
+        <input type="radio" name="radio-choice-b" id="radio-choice-g" value="nuclearbomb">
+        <label for="radio-choice-g">Nuclear Bomb</label>
+</fieldset>
   </div>
 
   <div data-role="main" class="ui-content">
